# agentic-agent

./: README.md  pyproject.toml  test_pdf_generator.py  test_pdf_genetor.py
db/: chroma.sqlite3
output/: ai_code_assistance_comparative_evaluation.md  ai_frameworks.md  anthropic_ai_research_dossier.md  astro_numerology_resources_and_courses_research.md  azure_devops_to_github_actions_migration_plan.md  cbse_class12_chemistry_march_2026_board_scoring_blueprint_01.md  cbse_class12_physics_2026_90_percent_prediction.md  claude_code_mastery_course_blueprint_01.md  comprehensive_agentic_ai_list.md  conscious_education_2026_plus_course_research_and_strategy_guide.md  copilot_email_automation_architecture.md  crystal_healing_consciousness_development_course_blueprint_and_content_guide.md  design.md  devin_koreai_enterprise_blueprint.md  enterprise_ai_agentic_ai_coe_research_and_setup_guide.md  enterprise_llm_security_blueprint.md  epilogue_human_in_loop.md  full_stack_ai_enabled_developer_course.md  fullstack_architect_ai_era_article.md  germany_bachelor_technology_programs_for_indian_students_2026.md  github_parent_child_terraform_aws_platform_blueprint.md  global_it_ai_study_guide.md  global_numerology_silver_gold_platinum_mastery_blueprint_01.md  indian_top20_stocks_12_month_25_percent_strategy.md  indigo_airlines_2025_crisis_report.md  kerala_ayurvedic_holistic_treatment_research_01.md  life_management_vs_success_research.md  numerology_mastery_blueprint_01.md  numerology_mastery_course_blueprint.md  numerology_world_events_2026_blueprint.md  part_III_applications.md  (+30 more)
(+100 files in other folders)
