[project]
name = "agentic_agent"
version = "0.1.0"
description = "agentic_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
agentic_agent = "agentic_agent.main:run"
run_crew = "agentic_agent.main:run"
train = "agentic_agent.main:train"
replay = "agentic_agent.main:replay"
test = "agentic_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
